src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Dementia Connect Portal Application</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Dementia Friends Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCE_ServicesProvided__c</fullName>
        <description>Used within the Dementia Connect Extranet application form. Applicants use this force to describe the services they provide.</description>
        <label>Description of services provided</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0-10</fullName>
                </value>
                <value>
                    <fullName>11-250</fullName>
                </value>
                <value>
                    <fullName>251-1000</fullName>
                </value>
                <value>
                    <fullName>1001-5000</fullName>
                </value>
                <value>
                    <fullName>5001-20000</fullName>
                </value>
                <value>
                    <fullName>20001+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_code__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Org code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Partner_code__c</fullName>
        <label>Partner code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health &amp; Social Care</fullName>
                </value>
                <value>
                    <fullName>Local Authority</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Public Service</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Sport &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Power &amp; Utilities</fullName>
                </value>
                <value>
                    <fullName>Allied Healthcare Professionals</fullName>
                </value>
                <value>
                    <fullName>Other(please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector_other__c</fullName>
        <label>Sector - other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>DCE_Admins_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Dementia Connect Portal Admins</label>
        <queue>DCE_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DF_Website_Admins_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DF Website Admins</label>
        <queue>DF_Website_Admins</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>DCE_Application</fullName>
        <active>true</active>
        <businessProcess>Dementia Connect Portal Application</businessProcess>
        <description>Used to identify new requests from the Dementia Connect Extranet</description>
        <label>Dementia Connect Extranet Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dementia_Friends_Website</fullName>
        <active>true</active>
        <businessProcess>Dementia Friends Lead Process</businessProcess>
        <label>Dementia Friends Website</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>